--- a/classic.html
+++ b/classic.html
@@ -9,9 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="nav.css?v=2">
 </head>
 
 <body>
+    <nav class="top-nav">
+        <div class="nav-group">
+            <a href="index.html" class="nav-link">Guardians</a>
+            <a href="engage.html" class="nav-link">Space Quest</a>
+            <a href="math-race.html" class="nav-link">Math Race</a>
+            <a href="classic.html" class="nav-link active">Classic</a>
+        </div>
+    </nav>
     <div id="app">
         <div class="background-scene">
             <div id="stars1"></div>
@@ -23,9 +32,6 @@
 
         <header>
             <div class="logo">Zen Ginger Cat (Classic)</div>
-            <a href="index.html"
-                style="color: white; text-decoration: none; border: 1px solid white; padding: 5px 10px; border-radius: 5px; margin-left: 20px;">Go
-                to Zen Guardians 3D</a>
         </header>
 
         <main>
