--- a/engage.html
+++ b/engage.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Quest: The Quiet Rocket</title>
     <link rel="stylesheet" href="engage-style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=" Press+Start+2P"&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="nav.css?v=2">
 </head>
 
 <body>
+    <nav class="top-nav">
+        <div class="nav-group">
+            <a href="index.html" class="nav-link">Guardians</a>
+            <a href="engage.html" class="nav-link active">Space Quest</a>
+            <a href="math-race.html" class="nav-link">Math Race</a>
+            <a href="classic.html" class="nav-link">Classic</a>
+        </div>
+    </nav>
     <div id="game-container">
         <canvas id="gameCanvas"></canvas>
         <div id="ui-layer">
@@ -47,7 +56,6 @@
     </div>
 
     <div class="controls">
-        <button id="back-btn" onclick="window.location.href='index.html'">EXIT MISSION</button>
         <div class="sensitivity-control">
             <label>MIC SENSITIVITY</label>
             <input type="range" id="sensitivity" min="0" max="100" value="50">
