--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zen Ginger Cat | Noise Management</title>
-    <link rel="stylesheet" href="nav.css?v=2">
+    <link rel="stylesheet" href="style.css?v=8">
+    <link rel="stylesheet" href="nav.css?v=5">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
@@ -44,7 +45,7 @@
                         <span class="star-icon">★</span>
                         <span id="star-count">0</span>
                     </div>
-                    <button id="character-select-btn" class="icon-btn" title="Change Guardian">
+                    <button id="char-select-btn" class="icon-btn" title="Change Guardian">
                         👥
                     </button>
                 </div>
@@ -119,7 +120,7 @@
                 </div>
             </div>
         </div>
-        <script src="app.js"></script>
+        <script src="app.js?v=5"></script>
     </body>
 
 </html>
